Add withdraw by crypto in profile, finish cryptobot payment.

--- a/bot/.env
+++ b/bot/.env
@@ -1,2 +1,3 @@
 TOKEN='7834867231:AAFkq6B8InIF6OqJueBsKUbHKuHlL9H667A'
 CRYPTOPAY_API="279354:AAdEA4ecPFCmlyTry88V8Chm1Jtd5XDD0d5"
+TEST_CRYPTOPAY_API="19837:AAeDM8asYBVhENJVoGf1DKWKK2Jc8IFdbRV"
